<resources>
    <string name="app_name">Traker</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="distance">Distance:</string>
    <string name="start">Start</string>
    <string name="state">State</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="cell_text">Run at %1$s</string>

</resources>
