
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <fragment
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="false"
                 android:layout_below="@+id/map"
                 android:id="@+id/tableLayout"
                 android:layout_marginTop="50dp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/state"
                />
            <TextView android:id="@+id/run_stateTextView"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:paddingBottom="4dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/latitude"
                />
            <TextView android:id="@+id/run_latitudeTextView"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/longitude"
                android:layout_marginLeft="5dp"/>
            <TextView android:id="@+id/run_longitudeTextView"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/distance"
                />
            <TextView android:id="@+id/run_distanceTextView"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textSize="25sp"
                />

        </TableRow>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button android:id="@+id/run_startButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="@string/start"
                />
            <Button android:id="@+id/run_stopButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="@string/stop"
                />
            <Button android:id="@+id/run_clearButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="@string/clear"
                />
        </LinearLayout>
    </TableLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/show_info"
            android:scrollbars = "vertical"

          />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/show_info"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingRight="50dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency"
                android:id="@+id/frequency"
                android:layout_centerVertical="true"
                android:paddingRight="65dp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/editTime"
                android:layout_alignRight="@+id/frequency"
                />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>

